src/objects/SPE_ProducBacklog__c.object
<CustomObject>
    <fields>
        <fullName>Actor__c</fullName>
        <label>Actor</label>
        <picklist>
            <picklistValues>
                <fullName>KU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respondent</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternative_Flow_if_suggested_by_Atos__c</fullName>
        <label>Alternative Flow if suggested by Atos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternative_Path__c</fullName>
        <label>Alternative Path</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AtosComments__c</fullName>
        <label>Atos Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atos_Clarity__c</fullName>
        <label>Atos Clarity %</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Rule__c</fullName>
        <label>Business Rule Assumptions &amp; Exceptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Opened__c</fullName>
        <label>Date Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_PB_Approval__c</fullName>
        <formula>Developer_Approved_Date__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days PB Approval</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_PB_Submitted__c</fullName>
        <formula>IF(ISPICKVAL(PB_Status__c , &apos;Nokia Submitted&apos;) , (TODAY () - DATEVALUE(CreatedDate)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days PB Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefinitionofDone__c</fullName>
        <label>Definition of Done</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Approved_Date__c</fullName>
        <label>Developer Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Developer_Comments__c</fullName>
        <label>Developer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer_Owner__c</fullName>
        <label>Developer Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Kaushik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satyajit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudeshna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parthasarthi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exceptions__c</fullName>
        <label>Exceptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PBL_Development_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is PBL Development Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterProductBacklog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Product Backlog</label>
        <referenceTo>SPE_ProducBacklog__c</referenceTo>
        <relationshipLabel>Product Backlogs</relationshipLabel>
        <relationshipName>Product_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Audit Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Data Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consequence Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Adhoc Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Calculation Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Definition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PI Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Question Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scorecard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Scoring Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tool Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Tracker Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Manual</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NokiaComments__c</fullName>
        <label>Nokia Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nokia_Internal_alignment_notes_as_needed__c</fullName>
        <label>Nokia Internal alignment notes as needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NumberofSprintBacklogs__c</fullName>
        <label>Number of Sprint Backlogs</label>
        <summaryForeignKey>SPE_SprintBacklog__c.ProductBacklog__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OwnerComments__c</fullName>
        <label>Owner Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PBL_ID_Old__c</fullName>
        <description>QA01 PBL ID</description>
        <externalId>true</externalId>
        <inlineHelpText>QA01 PBL ID</inlineHelpText>
        <label>PBL ID Old</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBTitle__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB_Priority__c</fullName>
        <label>PB Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB_Status__c</fullName>
        <label>PB Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Superceded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReferenceExistingCRsBugs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Existing CR&apos;s, Bugs</label>
        <referenceTo>Bugs__c</referenceTo>
        <relationshipLabel>Product Backlogs</relationshipLabel>
        <relationshipName>Product_Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedBusinessRules__c</fullName>
        <label>Related Business Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequirementId__c</fullName>
        <label>Requirement Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequirementTitle__c</fullName>
        <label>Requirement Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Bug_Reference__c</fullName>
        <label>Requirement/Bug Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Assigned_To__c</fullName>
        <label>Sprint Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>Kaushik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satyajit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vishal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parthasarthi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sudeshna</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Superceded_by_PBL_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superceded by PBL ID</label>
        <referenceTo>SPE_ProducBacklog__c</referenceTo>
        <relationshipLabel>Product Backlogs (Superceded by PBL ID)</relationshipLabel>
        <relationshipName>Superceded_by_PBL_ID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Hoc Scorecard Aggregations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Hoc Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALU Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Data Connections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encryption</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI Canvas Criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KPI-PI Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location Hierarchy + Supplier Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule &amp; Time Period Handling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPE Attribute Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thresholds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usability Improvement</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UseCaseFlow__c</fullName>
        <label>Use Case Proposed Flow</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UseCasePostCondition__c</fullName>
        <label>Use Case Post Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UseCasePreCondition__c</fullName>
        <label>Use Case Pre Condition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Backlog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SPE2_Product_Backlog_Sprint_1</fullName>
        <columns>NAME</columns>
        <columns>PBL_ID_Old__c</columns>
        <columns>Business_Unit__c</columns>
        <columns>Sprint__c</columns>
        <columns>PB_Status__c</columns>
        <columns>PBTitle__c</columns>
        <columns>Topic__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Sprint 1</value>
        </filters>
        <label>SPE2 Product Backlog - Sprint 1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>PB ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Backlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>